Editing projects page

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
           <div class="card-body">
             <h5 class="card-title">Visual Proof of Discrete Math Concept</h5>
             <p class="card-text">A visual representation using Matplotlib to illustrate a discrete math concept.</p>
-            <a href="https://github.com/GanschowJosh/visual-proof" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/GanschowJosh/DiscreteMath/blob/main/triominoes.py" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <div class="card-body">
             <h5 class="card-title">Prime Labeling Program for Grids</h5>
             <p class="card-text">A program that assigns prime numbers to grid positions based on specific rules.</p>
-            <a href="https://github.com/GanschowJosh/prime-labeling" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/GanschowJosh/PrimeGridLabeling" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
           <div class="card-body">
             <h5 class="card-title">Research on Steiner Triple Systems</h5>
             <p class="card-text">An in-depth research project exploring Steiner Triple Systems.</p>
-            <a href="https://github.com/GanschowJosh/steiner-triple-systems" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/GanschowJosh/Steiner-Triple-Systems-Research" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
           <div class="card-body">
             <h5 class="card-title">Levenshtein Distance Calculator</h5>
             <p class="card-text">A C++ program to calculate the Levenshtein distance between two strings.</p>
-            <a href="https://github.com/GanschowJosh/levenshtein-calculator" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/GanschowJosh/Word-Edit-Distance" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
@@ -93,23 +93,47 @@
       <!-- Project 5 -->
       <div class="col-md-6 mb-4">
         <div class="card h-100">
-          <img src="assets/images/competitive-programming.png" class="card-img-top" alt="Competitive Programming Solutions">
+          <img src="assets/images/Kattis.png" class="card-img-top" alt="Kattis Solutions">
           <div class="card-body">
-            <h5 class="card-title">Competitive Programming Solutions</h5>
-            <p class="card-text">Solutions to various problems on Kattis, CSES, and LeetCode.</p>
-            <a href="https://github.com/GanschowJosh/competitive-solutions" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <h5 class="card-title">Kattis Solutions</h5>
+            <p class="card-text">Solutions to various problems on Kattis</p>
+            <a href="https://github.com/GanschowJosh/Kattis" class="btn btn-primary" target="_blank">View on GitHub</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 6 -->
+      <div class="col-md-6 mb-4">
+        <div class="card h-100">
+          <img src="assets/images/competitive-programming.png" class="card-img-top" alt="CSES Solutions">
+          <div class="card-body">
+            <h5 class="card-title">CSES Solutions</h5>
+            <p class="card-text">Solutions to various problems on the CSES.fi problem set</p>
+            <a href="https://github.com/GanschowJosh/CSES" class="btn btn-primary" target="_blank">View on GitHub</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project 7 -->
+      <div class="col-md-6 mb-4">
+        <div class="card h-100">
+          <img src="assets/images/competitive-programming.png" class="card-img-top" alt="Leetcode Solutions">
+          <div class="card-body">
+            <h5 class="card-title">Leetcode Solutions</h5>
+            <p class="card-text">Solutions to various problems on LeetCode</p>
+            <a href="https://github.com/GanschowJosh/LeetCode" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
       
-      <!-- Project 6 -->
+      <!-- Project 8 -->
       <div class="col-md-6 mb-4">
         <div class="card h-100">
           <img src="assets/images/pptx-to-md.png" class="card-img-top" alt="PPTX to MD Converter">
           <div class="card-body">
             <h5 class="card-title">PPTX to MD Converter</h5>
             <p class="card-text">A script that converts PowerPoint presentations to Markdown format.</p>
-            <a href="https://github.com/GanschowJosh/pptx-to-md" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="https://github.com/GanschowJosh/PowerPointToMarkdown" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
       </div>
