--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body class="light-mode">
+<body class="dark-mode">
   
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
