editing tools.html to implement dark mode

--- a/tools.html
+++ b/tools.html
@@ -11,10 +11,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body class="light-mode">
   
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Joshua Ganschow</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
@@ -22,7 +22,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ms-auto align-items-center">
           <li class="nav-item">
             <a class="nav-link" href="projects.html">Projects</a>
           </li>
@@ -31,6 +31,13 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
+          </li>
+          <!-- Dark Mode Toggle Switch -->
+          <li class="nav-item">
+            <div class="form-check form-switch ms-3">
+              <input class="form-check-input" type="checkbox" id="darkModeToggle">
+              <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
+            </div>
           </li>
         </ul>
       </div>
@@ -54,7 +61,11 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
+  <!-- Pasch Checker JS (Ensure it's loaded if needed) -->
+  <script src="assets/js/pasch-checker.js"></script>
+  
   <!-- Custom JS -->
   <script src="assets/js/script.js"></script>
+  
 </body>
 </html>
