--- a/tools/steiner-triple-generator.html
+++ b/tools/steiner-triple-generator.html
@@ -99,7 +99,7 @@
                 resultOutput.textContent = `Steiner Triple System of order ${v}:\n${triplesString}`;
                 
                 // Optional: Visualize the Steiner Triple System
-                visualizeSTS(triplesString);
+                // visualizeSTS(triplesString);
                 
             } catch (error) {
                 resultOutput.textContent = error.message;
