--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
           <!-- Dark Mode Toggle Switch -->
           <li class="nav-item">
             <div class="form-check form-switch ms-3">
-              <input class="form-check-input" type="checkbox" id="darkModeToggle">
+              <input class="form-check-input" type="checkbox" id="darkModeToggle" aria-label="Toggle Dark Mode">
               <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
             </div>
           </li>
