--- a/tools/steiner-triple-generator.html
+++ b/tools/steiner-triple-generator.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
-<body class="dark-mode">
+<body class="light-mode">
     
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
