Adding images to projects section

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
       <!-- Project 1 -->
       <div class="col-md-6 mb-4">
         <div class="card h-100">
-          <img src="assets/images/discrete-math.png" class="card-img-top" alt="Discrete Math Visual Proof">
+          <img src="assets/images/triominoes.png" class="card-img-top" alt="Discrete Math Visual Proof">
           <div class="card-body">
             <h5 class="card-title">Visual Proof of Discrete Math Concept</h5>
             <p class="card-text">A visual representation using Matplotlib to illustrate a discrete math concept.</p>
@@ -100,7 +100,7 @@
       <!-- Project 5 -->
       <div class="col-md-6 mb-4">
         <div class="card h-100">
-          <img src="assets/images/Kattis.png" class="card-img-top" alt="Kattis Solutions">
+          <img src="assets/images/Kattis.jpg" class="card-img-top" alt="Kattis Solutions">
           <div class="card-body">
             <h5 class="card-title">Kattis Solutions</h5>
             <p class="card-text">Solutions to various problems on Kattis</p>
@@ -112,7 +112,7 @@
       <!-- Project 6 -->
       <div class="col-md-6 mb-4">
         <div class="card h-100">
-          <img src="assets/images/competitive-programming.png" class="card-img-top" alt="CSES Solutions">
+          <img src="assets/images/cses.jpg" class="card-img-top" alt="CSES Solutions">
           <div class="card-body">
             <h5 class="card-title">CSES Solutions</h5>
             <p class="card-text">Solutions to various problems on the CSES.fi problem set</p>
@@ -124,7 +124,7 @@
       <!-- Project 7 -->
       <div class="col-md-6 mb-4">
         <div class="card h-100">
-          <img src="assets/images/competitive-programming.png" class="card-img-top" alt="Leetcode Solutions">
+          <img src="assets/images/leetcode.png" class="card-img-top" alt="Leetcode Solutions">
           <div class="card-body">
             <h5 class="card-title">Leetcode Solutions</h5>
             <p class="card-text">Solutions to various problems on LeetCode</p>
