Small tweaks to about page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="tools.html">Tools</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link active" href="about.html">About</a>
                     </li>
                     <!-- Dark Mode Toggle Switch -->
                     <li class="nav-item">
@@ -50,7 +50,6 @@
         <section id="introduction" class="mb-5">
             <h2>About Me</h2>
             <p>
-                <!-- Replace this text with your introduction -->
                 Hello! I'm Joshua Ganschow, a Computer Science and Mathematics student at Dakota State University with a strong background in competitive programming and algorithm design for combinatorics and graph theory. I enjoy creating impactful projects and continuously expanding my knowledge in the field of graph theory, combinatorics, and all things computer science.
             </p>
         </section>
@@ -181,7 +180,6 @@
                 <!-- Project Card 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img src="assets/images/project1.png" class="card-img-top" alt="[Project Name]">
                         <div class="card-body">
                             <h5 class="card-title">Undergraduate Research - Steiner Triple Systems</h5>
                             <p class="card-text">Research into the combinatorics/graph theory structure of Steiner Triple Systems</p>
@@ -193,7 +191,6 @@
                 <!-- Project Card 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img src="assets/images/project2.png" class="card-img-top" alt="[Project Name]">
                         <div class="card-body">
                             <h5 class="card-title">Undergraduate Research - Prime Labeling</h5>
                             <p class="card-text">Collaboration with other undergraduate students in the study of prime labeling of matrices.</p>
