Fixing accordion collapsing in experience section

--- a/about.html
+++ b/about.html
@@ -117,11 +117,11 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" 
-                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Competitive Programming Leader for DSU Programming Club
                         </button>
                     </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" 
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" 
                          data-bs-parent="#experienceAccordion">
                         <div class="accordion-body">
                             <strong>May 2024 - Present</strong>
