Fixing navbar for pasch checker page

--- a/tools/pasch-checker.html
+++ b/tools/pasch-checker.html
@@ -14,7 +14,7 @@
 <body class="light-mode">
     
     <!-- Navbar with Dark Mode Toggle -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">Joshua Ganschow</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
@@ -35,7 +35,7 @@
                     <!-- Dark Mode Toggle Switch -->
                     <li class="nav-item">
                         <div class="form-check form-switch ms-3">
-                            <input class="form-check-input" type="checkbox" id="darkModeToggle">
+                            <input class="form-check-input" type="checkbox" id="darkModeToggle" aria-label="Toggle Dark Mode">
                             <label class="form-check-label" for="darkModeToggle">Dark Mode</label>
                         </div>
                     </li>
