Changing name of tree generator file

--- a/tools.html
+++ b/tools.html
@@ -53,7 +53,7 @@
       <a href="tools/pasch-checker.html" class="list-group-item list-group-item-action">Pasch/Anti-Pasch Checker</a>
       <a href="tools/is-steiner-triple-system.html" class="list-group-item list-group-item-action">Is Steiner Triple System Checker</a>
       <a href="tools/prufer-code-generator.html" class="list-group-item list-group-item-action">Prufer Code Generator</a>
-      <a href="tools/tree-generator.html" class="list-group-item list-group-item-action">Tree Generator from Prufer Code</a>
+      <a href="tools/prufer-code-decoder.html" class="list-group-item list-group-item-action">Tree Generator from Prufer Code</a>
       <a href="tools/magic-square-checker.html" class="list-group-item list-group-item-action">Magic Square Checker</a>
     </div>
   </div>
