--- a/tools/pasch-checker.html
+++ b/tools/pasch-checker.html
@@ -123,7 +123,7 @@
             // Example that contains a Pasch configuration
             const exampleTriplesWithPasch = '1-2-3,1-4-5,1-6-7,2-4-6,2-5-7,3-4-7,3-5-6';
             // Example that is anti-Pasch
-            const exampleTriplesAntiPasch = '1-2-4,1-3-5,1-6-7,2-3-6,2-5-7,3-4-7,4-5-6';
+            const exampleTriplesAntiPasch = '1-2-4,1-3-5,2-3-6,3-4-7,8-2-5,9-4-5,1-6-9,8-4-6,10-5-6,1-10-7,2-11-7,12-5-7,13-6-7,8-1-14,8-3-12,8-15-7,9-2-15,16-9-3,9-17-7,8-9-18,18-2-10,10-3-15,16-10-4,8-10-11,9-10-19,16-1-11,11-17-3,11-4-13,19-11-5,11-6-14,9-11-12,1-12-17,2-12-13,18-4-12,19-12-6,10-12-14,1-13-15,18-3-13,16-13-5,8-19-13,9-13-14,17-10-13,16-2-14,19-3-14,17-4-14,5-14-15,18-14-7,19-4-15,17-6-15,18-11-15,16-12-15,16-18-6,16-19-7,8-16-17,17-2-19,17-18-5,1-18-19';
             // Choose which example to load
             const loadWithPasch = confirm("Load example that **contains** a Pasch configuration? Click 'Cancel' to load an anti-Pasch example.");
             if (loadWithPasch) {
