--- a/projects.html
+++ b/projects.html
@@ -54,8 +54,8 @@
         <div class="card h-100">
           <img src="assets/images/triominoes.png" class="card-img-top" alt="Discrete Math Visual Proof">
           <div class="card-body">
-            <h5 class="card-title">Visual Proof of Discrete Math Concept</h5>
-            <p class="card-text">A visual representation using Matplotlib to illustrate a discrete math concept.</p>
+            <h5 class="card-title">Visual Inductive Proof</h5>
+            <p class="card-text">A visual representation using Matplotlib to illustrate a proof by induction for the statment: "Prove that for any 2^n by 2^n grid with any one square removed, a number of L-shaped triominoes can be made to cover the entire board".</p>
             <a href="https://github.com/GanschowJosh/DiscreteMath/blob/main/triominoes.py" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <img src="assets/images/prime-labeling.png" class="card-img-top" alt="Prime Labeling Program">
           <div class="card-body">
             <h5 class="card-title">Prime Labeling Program for Grids</h5>
-            <p class="card-text">A program that assigns prime numbers to grid positions based on specific rules.</p>
+            <p class="card-text">Collaborative project with other DSU undergraduate students to label an NxM matrix such that all numbers from 1 to N*M are used and each block in the matrix is neighbored only by numbers coprime to it.</p>
             <a href="https://github.com/GanschowJosh/PrimeGridLabeling" class="btn btn-primary" target="_blank">View on GitHub</a>
           </div>
         </div>
