--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
@@ -103,16 +100,13 @@
                 <!-- Connect with Me -->
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Connect with Me</h5>
-                    <a href="https://github.com/yourusername" class="me-4 text-reset" target="_blank">
+                    <a href="https://github.com/GanschowJosh" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
-                    <a href="https://linkedin.com/in/yourusername" class="me-4 text-reset" target="_blank">
+                    <a href="https://linkedin.com/in/joshua-ganschow" class="me-4 text-reset" target="_blank">
                         <i class="fab fa-linkedin fa-2x"></i>
                     </a>
-                    <a href="https://twitter.com/yourusername" class="me-4 text-reset" target="_blank">
-                        <i class="fab fa-twitter fa-2x"></i>
-                    </a>
-                    <a href="mailto:your.email@example.com" class="me-4 text-reset" target="_blank">
+                    <a href="mailto:ganschowjosh@gmail.com" class="me-4 text-reset" target="_blank">
                         <i class="fas fa-envelope fa-2x"></i>
                     </a>
                 </div>
