--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
           <div class="card-body">
             <h5 class="card-title">Visual Inductive Proof</h5>
             <p class="card-text">A visual representation using Matplotlib to illustrate a proof by induction for the statment: "Prove that for any 2^n by 2^n grid with any one square removed, a number of L-shaped triominoes can be made to cover the entire board".</p>
-            <a href="https://github.com/GanschowJosh/DiscreteMath/blob/main/triominoes.py" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="projects/visual-inductive-proof.html" class="btn btn-primary" target="_blank">Learn more</a>
           </div>
         </div>
       </div>
