Adding project page for prime labeling project

--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
           <div class="card-body">
             <h5 class="card-title">Prime Labeling Program for Grids</h5>
             <p class="card-text">Collaborative project with other DSU undergraduate students to label an NxM matrix such that all numbers from 1 to N*M are used and each block in the matrix is neighbored only by numbers coprime to it.</p>
-            <a href="https://github.com/GanschowJosh/PrimeGridLabeling" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="projects/prime-labeling-project.html" class="btn btn-primary" target="_blank">Learn more</a>
           </div>
         </div>
       </div>
