Adding page for Steiner Triple Systems project

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
           <div class="card-body">
             <h5 class="card-title">Research on Steiner Triple Systems</h5>
             <p class="card-text">An in-depth research project exploring Steiner Triple Systems.</p>
-            <a href="https://github.com/GanschowJosh/Steiner-Triple-Systems-Research" class="btn btn-primary" target="_blank">View on GitHub</a>
+            <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary" target="_blank">Learn more</a>
           </div>
         </div>
       </div>
