Changing button targets

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
           <div class="card-body">
             <h5 class="card-title">Visual Inductive Proof</h5>
             <p class="card-text">A visual representation using Matplotlib to illustrate a proof by induction for the statment: "Prove that for any 2^n by 2^n grid with any one square removed, a number of L-shaped triominoes can be made to cover the entire board".</p>
-            <a href="projects/visual-inductive-proof.html" class="btn btn-primary" target="_blank">Learn more</a>
+            <a href="projects/visual-inductive-proof.html" class="btn btn-primary">Learn more</a>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@
           <div class="card-body">
             <h5 class="card-title">Prime Labeling Program for Grids</h5>
             <p class="card-text">Collaborative project with other DSU undergraduate students to label an NxM matrix such that all numbers from 1 to N*M are used and each block in the matrix is neighbored only by numbers coprime to it.</p>
-            <a href="projects/prime-labeling-project.html" class="btn btn-primary" target="_blank">Learn more</a>
+            <a href="projects/prime-labeling-project.html" class="btn btn-primary">Learn more</a>
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
           <div class="card-body">
             <h5 class="card-title">Research on Steiner Triple Systems</h5>
             <p class="card-text">An in-depth research project exploring Steiner Triple Systems.</p>
-            <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary" target="_blank">Learn more</a>
+            <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary">Learn more</a>
           </div>
         </div>
       </div>
