Fixing grammar in prime labeling project page

--- a/projects/prime-labeling-project.html
+++ b/projects/prime-labeling-project.html
@@ -63,7 +63,7 @@
       <!-- Impetus Section -->
       <div class="col-12 mb-4">
         <h2>Impetus</h2>
-        <p>After an research presentation, a professor mentioned the idea of graph labeling in the context of a matrix and we thought it would be an interesting project to work on together.</p>
+        <p>After a research presentation, a professor mentioned the idea of graph labeling in the context of a matrix and I thought it would be an interesting project to work on with my friends and fellow DSU students.</p>
         <ul>
           <li>Interest in graph theory and algorithms associated with graph theory.</li>
           <li>Desire to work collaboratively with other passionated students.</li>
