--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Undergraduate Research - Steiner Triple Systems</h5>
                             <p class="card-text">Research into the combinatorics/graph theory structure of Steiner Triple Systems</p>
-                            <a href="https://github.com/GanschowJosh/Steiner-Triple-Systems-Research" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary" target="_blank">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Undergraduate Research - Prime Labeling</h5>
                             <p class="card-text">Collaboration with other undergraduate students in the study of prime labeling of matrices.</p>
-                            <a href="https://github.com/GanschowJosh/PrimeGridLabeling" class="btn btn-primary" target="_blank">View Project</a>
+                            <a href="projects/prime-labeling-project.html" class="btn btn-primary" target="_blank">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -213,13 +213,6 @@
             </ul>
         </section>
     </div>
-    
-    <!-- Footer -->
-    <footer class="bg-light text-center text-lg-start">
-        <div class="text-center p-3">
-            © 2024 Joshua Ganschow
-        </div>
-    </footer>
     
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
