--- a/about.html
+++ b/about.html
@@ -59,10 +59,10 @@
         <section id="skills" class="mb-5">
             <h3>Skills</h3>
             <ul class="list-group">
-                <li class="list-group-item">Programming Languages: Python, JavaScript, C++</li>
+                <li class="list-group-item">Programming Languages: Python, JavaScript, C++, C#</li>
                 <li class="list-group-item">Web Development: HTML, CSS, Bootstrap</li>
-                <li class="list-group-item">Data Analysis: Pandas, NumPy, Matplotlib</li>
-                <li class="list-group-item">Tools & Platforms: Git, GitHub</li>
+                <li class="list-group-item">Data Analysis: Pandas, NumPy, Matplotlib, Multiprocessing</li>
+                <li class="list-group-item">Tools & Platforms: Git, GitHub, Visual Studio</li>
             </ul>
         </section>
         
