Updating tools page

--- a/tools.html
+++ b/tools.html
@@ -47,17 +47,33 @@
   
   <!-- Main Content -->
   <div class="container mt-5 pt-5">
-    <h2>Mathematical Tools</h2>
-    <p>Explore the mathematical tools I've developed. These tools are built using JavaScript for seamless integration on the web.</p>
-    <div class="list-group">
-      <a href="tools/steiner-triple-generator.html" class="list-group-item list-group-item-action">Steiner Triple Systems Generator</a>
-      <a href="tools/pasch-checker.html" class="list-group-item list-group-item-action">Pasch/Anti-Pasch Checker</a>
-      <a href="tools/is-steiner-triple-system.html" class="list-group-item list-group-item-action">Is Steiner Triple System Checker</a>
-      <a href="tools/prufer-code-generator.html" class="list-group-item list-group-item-action">Prufer Code Generator</a>
-      <a href="tools/prufer-code-decoder.html" class="list-group-item list-group-item-action">Tree Generator from Prufer Code</a>
-      <a href="tools/magic-square-checker.html" class="list-group-item list-group-item-action">Magic Square Checker</a>
+    <h2 class="text-center mb-4">Mathematical Tools</h2>
+    <p class="text-center mb-5">Explore the mathematical tools I've developed. These tools are built using JavaScript for seamless integration on the web.</p>
+    
+    <div class="d-flex flex-column align-items-center gap-4">
+      <a href="tools/steiner-triple-generator.html" class="w-75">
+        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Steiner Triple Systems Generator</button>
+      </a>
+      <a href="tools/pasch-checker.html" class="w-75">
+        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Pasch/Anti-Pasch Checker</button>
+      </a>
+      <a href="tools/is-steiner-triple-system.html" class="w-75">
+        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Is Steiner Triple System Checker</button>
+      </a>
+      <a href="tools/prufer-code-generator.html" class="w-75">
+        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Prufer Code Generator</button>
+      </a>
+      <a href="tools/prufer-code-decoder.html" class="w-75">
+        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Tree Generator from Prufer Code</button>
+      </a>
+      <a href="tools/magic-square-checker.html" class="w-75">
+        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Magic Square Checker</button>
+      </a>
     </div>
   </div>
+
+
+
   
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
