Updating colors of tool cards

--- a/tools.html
+++ b/tools.html
@@ -50,31 +50,59 @@
     <h2 class="text-center mb-4">Mathematical Tools</h2>
     <p class="text-center mb-5">Explore the mathematical tools I've developed. These tools are built using JavaScript for seamless integration on the web.</p>
     
-    <div class="d-flex flex-column align-items-center gap-4">
-      <a href="tools/steiner-triple-generator.html" class="w-75">
-        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Steiner Triple Systems Generator</button>
-      </a>
-      <a href="tools/pasch-checker.html" class="w-75">
-        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Pasch/Anti-Pasch Checker</button>
-      </a>
-      <a href="tools/is-steiner-triple-system.html" class="w-75">
-        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Is Steiner Triple System Checker</button>
-      </a>
-      <a href="tools/prufer-code-generator.html" class="w-75">
-        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Prufer Code Generator</button>
-      </a>
-      <a href="tools/prufer-code-decoder.html" class="w-75">
-        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Tree Generator from Prufer Code</button>
-      </a>
-      <a href="tools/magic-square-checker.html" class="w-75">
-        <button class="btn btn-secondary btn-lg w-100 shadow rounded-pill">Magic Square Checker</button>
-      </a>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <div class="col">
+        <div class="tool-card text-center">
+          <a href="tools/steiner-triple-generator.html">
+            <h5 class="tool-title">Steiner Triple Systems Generator</h5>
+            <p class="tool-description">Generate Steiner triple systems for combinatorial research.</p>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="tool-card text-center">
+          <a href="tools/pasch-checker.html">
+            <h5 class="tool-title">Pasch/Anti-Pasch Checker</h5>
+            <p class="tool-description">Check if a system is Pasch or anti-Pasch compliant.</p>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="tool-card text-center">
+          <a href="tools/is-steiner-triple-system.html">
+            <h5 class="tool-title">Is Steiner Triple System Checker</h5>
+            <p class="tool-description">Verify if a given set is a valid Steiner triple system.</p>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="tool-card text-center">
+          <a href="tools/prufer-code-generator.html">
+            <h5 class="tool-title">Prufer Code Generator</h5>
+            <p class="tool-description">Generate a Prüfer code from a tree for encoding.</p>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="tool-card text-center">
+          <a href="tools/prufer-code-decoder.html">
+            <h5 class="tool-title">Tree Generator from Prufer Code</h5>
+            <p class="tool-description">Decode a Prüfer code to reconstruct a tree.</p>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="tool-card text-center">
+          <a href="tools/magic-square-checker.html">
+            <h5 class="tool-title">Magic Square Checker</h5>
+            <p class="tool-description">Check if a given square matrix is a magic square.</p>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 
 
-
-  
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
