Adding links to relevant information about projects

--- a/projects/steiner-triple-systems-project.html
+++ b/projects/steiner-triple-systems-project.html
@@ -58,6 +58,7 @@
       <div class="col-12 mb-4">
         <h2>Overview</h2>
         <p>An in-depth research project exploring Steiner Triple Systems. I researched and developed scripts and algorithms for generation, enumeration, and analysis of Steiner Triple Systems, furthering our understanding of these structures.</p>
+        <p>Extra information about Steiner Triple Systems: <a href="https://en.wikipedia.org/wiki/Steiner_system">Wikipedia</a>.</p>
       </div>
       
       <!-- Impetus Section -->
