--- a/tools/pasch-checker.html
+++ b/tools/pasch-checker.html
@@ -49,6 +49,7 @@
     <div class="container mt-5 pt-5">
         <h2>Pasch Checker</h2>
         <p>Determine whether your Steiner Triple System contains any Pasch configurations.</p>
+        <p>Extra information about Pasch Configurations: <a href="https://encyclopediaofmath.org/wiki/Pasch_configuration">Encyclopedia of Math</a>.</p>
         
         <form id="paschCheckForm">
             <div class="mb-3">
