--- a/tools/prufer-code-decoder.html
+++ b/tools/prufer-code-decoder.html
@@ -61,6 +61,7 @@
     <div class="container mt-5 pt-5">
         <h2>Prufer Code Decoder</h2>
         <p>Generate a tree from a given Prufer code and visualize the graph.</p>
+        <p>Extra information about Prufer codes: <a href="https://en.wikipedia.org/wiki/Pr%C3%BCfer_sequence">Wikipedia</a>.</p>
         
         <!-- Form for Prufer Code Input -->
         <form id="pruferDecoderForm">
