--- a/tools/prufer-code-generator.html
+++ b/tools/prufer-code-generator.html
@@ -50,6 +50,7 @@
     <div class="container mt-5 pt-5">
         <h2>Prufer Code Generator</h2>
         <p>Generate the Prufer code for a given tree by specifying its nodes and edges.</p>
+        <p>Extra information about Prufer codes: <a href="https://en.wikipedia.org/wiki/Pr%C3%BCfer_sequence">Wikipedia</a>.</p>
         
         <!-- Form for Tree Input -->
         <form id="pruferForm">
