--- a/index.html
+++ b/index.html
@@ -3,13 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Joshua Ganschow Portfolio</title>
+  <title>Joshua Ganschow | Mathematician & Developer Portfolio</title>
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <style>
+    /* Custom Styles */
+    .hero {
+      font-family: math;
+      background-image: url('assets/images/hero-background.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 3.5rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+
+    .hero p {
+      font-size: 1.25rem;
+      margin-bottom: 2rem;
+    }
+
+    .lead {
+      color: #ffffff;
+      padding: 0.5rem 10rem;
+    }
+
+    hero-text {
+      background-color: #ffffff;
+    }
+
+    .btn-primary, .btn-secondary {
+      transition: transform 0.2s ease, background-color 0.2s ease;
+    }
+
+    .btn-primary:hover {
+      background-color: #007bff;
+      transform: scale(1.05);
+    }
+
+    .btn-secondary:hover {
+      background-color: #6c757d;
+      transform: scale(1.05);
+    }
+
+    .footer {
+      background-color: #333;
+      color: #f1f1f1;
+      padding: 1.5rem;
+      text-align: center;
+    }
+
+    .footer a {
+      color: #f1f1f1;
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+
+    .footer a:hover {
+      color: #007bff;
+    }
+  </style>
   
 </head>
 <body class="light-mode">
@@ -45,16 +112,59 @@
     </div>
   </nav>
   
-  <!-- Main Content -->
-  <div class="container mt-5 pt-5">
-    <div class="jumbotron text-center">
+  <!-- Hero Section -->
+  <div class="hero">
+    <div>
       <h1 class="display-4">Welcome to My Portfolio</h1>
-      <p class="lead">I'm Joshua Ganschow, a mathematician and developer. Explore my projects and tools below.</p>
-      <hr class="my-4">
-      <a class="btn btn-primary btn-lg me-2" href="projects.html" role="button">View Projects</a>
+      <p class="lead">I'm Joshua Ganschow, a mathematician, developer, and competitive programmer. Dive into my work in combinatorics, custom tools for math research, and algorithmic problem-solving.</p>
+      <a class="btn btn-primary btn-lg me-2" href="projects.html" role="button">Explore Projects</a>
       <a class="btn btn-secondary btn-lg" href="tools.html" role="button">Mathematical Tools</a>
     </div>
   </div>
+  
+  <!-- Main Content -->
+  <div class="container mt-5 pt-5">
+    <div class="text-center mb-5">
+      <h2>Featured Projects and Tools</h2>
+      <p>Check out some of the recent projects I've worked on, from combinatorial tools to web-based applications.</p>
+    </div>
+    <section id="projects" class="mb-5">
+      <div class="row" >
+          <!-- Project Card 1 -->
+          <div class="col-md-4 mb-4">
+              <div class="card h-100">
+                  <div class="card-body">
+                      <h5 class="card-title">Undergraduate Research - Steiner Triple Systems</h5>
+                      <p class="card-text">Research into the combinatorics/graph theory structure of Steiner Triple Systems</p>
+                      <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary" target="_blank">Learn More</a>
+                  </div>
+              </div>
+          </div>
+          
+          <!-- Project Card 2 -->
+          <div class="col-md-4 mb-4">
+              <div class="card h-100">
+                  <div class="card-body">
+                      <h5 class="card-title">Undergraduate Research - Prime Labeling</h5>
+                      <p class="card-text">Collaboration with other undergraduate students in the study of prime labeling of matrices.</p>
+                      <a href="projects/prime-labeling-project.html" class="btn btn-primary" target="_blank">Learn More</a>
+                  </div>
+              </div>
+          </div>
+
+          <!-- Project Card 3 -->
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Steiner Triple Systems Generator</h5>
+                    <p class="card-text">JavaScript tool to generate a Steiner Triple System of a given order.</p>
+                    <a href="tools/steiner-triple-generator.html" class="btn btn-primary" target="_blank">View Tool</a>
+                </div>
+            </div>
+          </div>
+      </div>
+    </section>
+</div>
   
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -65,6 +175,23 @@
   <!-- Custom JS -->
   <script src="assets/js/script.js"></script>
   
+  <script>
+    // Smooth scroll for anchor links
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+
+    // Dark Mode Toggle
+    const toggle = document.getElementById('darkModeToggle');
+    toggle.addEventListener('change', () => {
+      document.body.classList.toggle('dark-mode');
+    });
+  </script>
   
 </body>
 </html>
