Changing wording on the homepage

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div class="hero">
     <div>
       <h1 class="display-4">Welcome to My Portfolio</h1>
-      <p class="lead">I'm Joshua Ganschow, a mathematician, developer, and competitive programmer. Dive into my work in combinatorics, custom tools for math research, and algorithmic problem-solving.</p>
+      <p class="lead">I'm Joshua Ganschow, a mathematician, developer, and competitive programmer. Check out my work in combinatorics, custom tools for graph theory and combinatorics research, and algorithmic problem-solving.</p>
       <a class="btn btn-primary btn-lg me-2" href="projects.html" role="button">Explore Projects</a>
       <a class="btn btn-secondary btn-lg" href="tools.html" role="button">Mathematical Tools</a>
     </div>
