--- a/tools/steiner-triple-generator.html
+++ b/tools/steiner-triple-generator.html
@@ -114,8 +114,10 @@
 
         // Attach click event listener to the Load Example button
         document.getElementById('loadExample').addEventListener('click', function() {
-            document.getElementById('orderInput').value = '7';
-            handleSteinerFormSubmit(7);
+            const valid = [7, 9, 13, 15, 19, 21, 25, 27, 31, 33, 37, 39, 43, 45, 49, 51, 55, 57, 61, 63, 67, 69, 73, 75, 79, 81, 85, 87, 91, 93, 97, 99];
+            var item = valid[Math.floor(Math.random() * valid.length)];
+            document.getElementById('orderInput').value = item.toString();
+            handleSteinerFormSubmit(item);
         });
 
         /**
