--- a/projects/prime-labeling-project.html
+++ b/projects/prime-labeling-project.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Visual Inductive Proof | Joshua Ganschow Portfolio</title>
+  <title>Prime Labeling Project | Joshua Ganschow Portfolio</title>
   
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../assets/css/style.css">
