Adding GPA to about page

--- a/about.html
+++ b/about.html
@@ -155,6 +155,7 @@
                         <div class="accordion-body">
                             <strong>Dakota State University, Madison, South Dakota</strong>
                             <p>2023 - 2026 (anticipated)</p>
+                            <p>GPA: 3.95</p>
                             <ul>
                                 <li>Relevant coursework</li>
                                     <ul>
