--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Undergraduate Research - Steiner Triple Systems</h5>
                       <p class="card-text">Research into the combinatorics/graph theory structure of Steiner Triple Systems</p>
-                      <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary" target="_blank">Learn More</a>
+                      <a href="projects/steiner-triple-systems-project.html" class="btn btn-primary">Learn More</a>
                   </div>
               </div>
           </div>
@@ -147,7 +147,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Undergraduate Research - Prime Labeling</h5>
                       <p class="card-text">Collaboration with other undergraduate students in the study of prime labeling of matrices.</p>
-                      <a href="projects/prime-labeling-project.html" class="btn btn-primary" target="_blank">Learn More</a>
+                      <a href="projects/prime-labeling-project.html" class="btn btn-primary">Learn More</a>
                   </div>
               </div>
           </div>
@@ -158,7 +158,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Steiner Triple Systems Generator</h5>
                     <p class="card-text">JavaScript tool to generate a Steiner Triple System of a given order.</p>
-                    <a href="tools/steiner-triple-generator.html" class="btn btn-primary" target="_blank">View Tool</a>
+                    <a href="tools/steiner-triple-generator.html" class="btn btn-primary">View Tool</a>
                 </div>
             </div>
           </div>
